# word_generator

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/langs/: Fr.txt  mod.rs
